Finalizazcion de Ediflow