@@ -12,12 +12,12 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -27,26 +27,26 @@ import java.util.stream.Collectors;
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
-
     private final UserDetailsService userDetailsService;
+
     @Override
     protected void doFilterInternal(
             @NonNull HttpServletRequest request,
             @NonNull HttpServletResponse response,
-            @NonNull FilterChain filterChain)
-            throws ServletException, IOException {
+            @NonNull FilterChain filterChain
+    ) throws ServletException, IOException {
 
         String path = request.getServletPath();
 
-        // Rutas públicas sin autenticación (ajustá según tus endpoints)
-        if (path.equals("/auth/login-admin") || path.equals("/auth/register-admin")) {
+
+        if (path.equals("/auth/login") || path.equals("/auth/register-admin") || path.equals("/auth/register-resident")) {
             filterChain.doFilter(request, response);
             return;
         }
 
         final String authHeader = request.getHeader("Authorization");
         final String jwt;
-        final String userEmail;
+        final String username;
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
@@ -54,33 +54,46 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         jwt = authHeader.substring(7);
-        userEmail = jwtService.extractUsername(jwt);
+        username = jwtService.extractUsername(jwt);
 
-        if (userEmail != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            UserDetails userDetails = this.userDetailsService.loadUserByUsername(userEmail);
+        if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+            UserDetails userDetails = this.userDetailsService.loadUserByUsername(username);
 
             if (jwtService.isTokenValid(jwt, userDetails)) {
                 Claims claims = jwtService.extractAllClaims(jwt);
                 Object rawRoles = claims.get("roles");
-                List<SimpleGrantedAuthority> authorities = List.of();
+                List<SimpleGrantedAuthority> authorities = Collections.emptyList();
 
                 if (rawRoles instanceof List<?>) {
-                    authorities = ((List<?>) rawRoles).stream()
-                            .map(Object::toString)
-                            .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList());
+                    List<?> rawList = (List<?>) rawRoles;
+
+                    if (!rawList.isEmpty()) {
+                        Object first = rawList.get(0);
+
+                        if (first instanceof String) {
+                            authorities = rawList.stream()
+                                    .map(Object::toString)
+                                    .map(SimpleGrantedAuthority::new)
+                                    .collect(Collectors.toList());
+
+                        } else if (first instanceof Map) {
+                            authorities = rawList.stream()
+                                    .map(r -> (Map<?, ?>) r)
+                                    .map(m -> m.get("authority"))
+                                    .filter(a -> a instanceof String)
+                                    .map(a -> new SimpleGrantedAuthority((String) a))
+                                    .collect(Collectors.toList());
+                        }
+                    }
                 }
 
-                UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(
-                        userDetails,
-                        null,
-                        authorities
-                );
+                UsernamePasswordAuthenticationToken authenticationToken =
+                        new UsernamePasswordAuthenticationToken(userDetails, null, authorities);
                 authenticationToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authenticationToken);
             }
         }
+
         filterChain.doFilter(request, response);
     }
 }
-
